--- a/_config.yml
+++ b/_config.yml
@@ -6,14 +6,14 @@ title: Thierry Kamagne
 # Edit next line, replacing 'techfolios' with your github username
 url: "https://trkamag.github.io"
 # Edit next line so that baseurl is "" if your repo is <username>.github.io
-baseurl: ""
+baseurl: "/"
 
 # OPTIONAL CHANGES
 # You might want to change the bio page label to something else, such as CV
 bio-page-label: About
 # You might want to change the theme associated with one or more sections of the site.
 # Defining your own custom theme variations is easy. See the documentation.
-theme-home: theme-home-builtin-1.html
+theme-home: theme-home-builtin-1.htmlsssss
 theme-projects: theme-projects-builtin-1.html
 theme-essays: theme-essays-builtin-1.html
 theme-bio: theme-bio-builtin-2.html
